--- a/_site.yml
+++ b/_site.yml
@@ -6,4 +6,6 @@ navbar:
       href: index.html
     - text: "About"
       href: about.html
+  source_url: https://github.com/mc-cover/mc-cover.github.io
 output_dir: "."
+base_url: https://mc-cover.github.io 
